# crypto-trading-bot

./: .gitignore  README.md  app.properties  config_managers.py  constants.py  consts.py  eastmoney.py  loggers.py  loggings.yaml  main.py  manage.py  margin_tradings.py  mongo_utils.py  pyproject.toml  requirements.txt  tests.py  utils.py
.devcontainer/: devcontainer.json
alerts/: __init__.py
algos/: ema.py  grid_trading.py  market_stop_loss.py  monitors.py  okex_grid_trading.py  okex_transaction_dumper.py
algos/ttm/: squeeze.py
bots/: __init__.py  base.py  bnc.py  okx.py
configs/: grid_trading.yaml  kline_history.yaml  kline_stock.yaml  symbols_history.yaml  trades_history.yaml
connections/: __init__.py  base.py  bnc.py  cmc.py  ibkr.py  okx.py  sina.py  tencent.py
connections/eastmoney/: __init__.py  funds2mongo.py
connections/eastmoney/data/: funding.json  historical_eastmoney_position_20230309.json
eastmoney/: __init__.py  funds2mongo.py  kline_grabber.py  mongo_utils.py  trades2mongo.py  trades_processer.py
eastmoney/data/: trades.json
excon/: okx.py
indicators/: __init__.py  dm.py  ma.py  ratios.py  vwap.py
strategies/: asgi.py  settings.py  urls.py  wsgi.py
