[project]
name = ""
version = ""
description = ""
authors = [
    {name = "frank", email = "pingrunhuang@gmail.com"},
]
dependencies = [
    "pymongo>=4.3.3",
    "pandas>=1.5.3",
    "pyyaml>=6.0",
    "ccxt>=3.0.16",
    "websocket>=0.2.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
em-trades = "eastmoney/trades2mongo.py"
em-funds = "eastmoney/funds2mongo.py"
em-funds-calc = "em_calc.py"