[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pingrunhuang", email = "pingrunhuang@gmail.com"},
]
dependencies = [
    "pandas>=2.0.1",
    "requests>=2.30.0",
    "pyyaml>=6.0",
    "pymongo>=4.3.3",
    "ccxt>=3.0.100",
    "websockets>=11.0.3",
    "click>=8.1.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
em-trades = "eastmoney/trades2mongo.py"
em-funds = "eastmoney/funds2mongo.py"
em-funds-calc = "em_calc.py"
bnc = "main.py "
