[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pingrunhuang", email = "pingrunhuang@gmail.com"},
]
dependencies = [
    "pandas>=2.0.1",
    "requests>=2.30.0",
    "pyyaml>=6.0",
    "pymongo>=4.3.3",
    "ccxt>=3.0.100",
    "click>=8.1.3",
    "ipython>=8.13.2",
    "asynciolimiter>=1.0.0b1",
    "motor>=3.1.2",
    "python-binance>=1.0.17",
    "anyio>=3.6.2",
    "async-unzip>=0.3.6",
    "aiofile>=3.8.5",
    "jupyter>=1.0.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
em-trades = "eastmoney/trades2mongo.py"
em-funds = "eastmoney/funds2mongo.py"
em-funds-calc = "em_calc.py"
em-klines = "main.py --funcname=eastmoney_klines"
grab_klines = "main.py --funcname=grab_klines"
grab_symbols = "main.py --funcname=upsert_symbols"
run_websockets = "main.py --funcname=websockets"
